@@ -178,5 +178,7 @@ Bug Fixes
 [ 1.2.0 ] Windows release version: MINRES gives wrong results, check compiler
 [ 1.2.4 ] MUMPS: 64bit version does not work, replaced with a new version
 [       ] AMG setup: number of DOF could drop dramatically
-[       ] VGMRES: "restart" might be too big
-[       ] Different results on different platforms
+[       ] VGMRES: "restart" could become too big
+[       ] different results on different platforms
+[       ] problems with BSR test function: see testbsr.c
+[       ] check convergence for problems from MM: see regression_mm.c
