@@ -26,9 +26,9 @@ solver_type              = 1      % 1 CG | 2 BiCGstab | 3 MinRes | 4 GMRes |
 
 precond_type             = 2      % 0 None | 1 Diag | 2 AMG | 3 FMG | 4 ILU | 5 Schwarz
 itsolver_tol             = 1e-6   % solver tolerance 
-itsolver_maxit           = 100    % maximal iteration number 
+itsolver_maxit           = 1000   % maximal iteration number 
 stop_type                = 1      % 1 ||r||/||b|| | 2 ||r||_B/||b||_B | 3 ||r||/||x||  
-itsolver_restart         = 100    % restart number for GMRES-type methods
+itsolver_restart         = 20     % restart number for GMRES
 
 %----------------------------------------------%
 % parameters for ILU preconditioners           %
@@ -45,7 +45,7 @@ ILU_relax                = 0.9    % add dropped entries to diagonal with relaxat
 %----------------------------------------------%
 
 Schwarz_mmsize           = 200    % max block size
-Schwarz_maxlvl           = 3      % level used to form blocks
+Schwarz_maxlvl           = 2      % level used to form blocks
 Schwarz_type             = 1      % 1 forward | 2 backward | 3 symmetric
 
 %----------------------------------------------%
@@ -76,8 +76,8 @@ AMG_ILU_levels           = 0      % number of levels using ILU smoother
 AMG_schwarz_levels       = 0	  % number of levels using Schwarz smoother
 AMG_relaxation	         = 1.1    % relaxation parameter for SOR smoother 
 AMG_polynomial_degree	 = 3      % degree of the polynomial smoother
-AMG_presmooth_iter       = 1      % number of presmoothing sweeps
-AMG_postsmooth_iter      = 1      % number of postsmoothing sweeps
+AMG_presmooth_iter       = 2      % number of presmoothing sweeps
+AMG_postsmooth_iter      = 2      % number of postsmoothing sweeps
 
 %----------------------------------------------%
 % parameters for classical AMG SETUP           %
@@ -95,7 +95,7 @@ AMG_max_row_sum          = 0.9    % Max row sum
 % parameters for aggregation-type AMG SETUP    %
 %----------------------------------------------%
 
-AMG_strong_coupled       = 0.16   % Strong coupled threshold
+AMG_strong_coupled       = 0.08   % Strong coupled threshold
 AMG_max_aggregation      = 20     % Max size of aggregations
 AMG_tentative_smooth     = 0.67   % Smoothing factor for tentative prolongation
 AMG_smooth_filter        = OFF    % Switch for filtered matrix for smoothing
