@@ -1,12 +1,14 @@
 File Name: CHANGES
 
-09/26/2013 FASP 1.3.6:
+09/28/2013 FASP 1.3.6:
 - Modify VS08 and VS10 dependency setup.
 - Update stat script.
 - Change Makefile default settings for release and debug versions.
 - Add a reference manual generated by Doxygen.
 - Revise the user guide.
 - Proof read the user guide by Xiaozhe Hu.
+- Change file name in test/main: testmm --> regression_mm.
+- Change file name in test/main: test_matfree --> regression_mf.
 
 09/17/2013 FASP 1.3.5:
 - If allocation memory failed, output warning and return NULL, instead of exit.
